--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,20 @@ html {
   left: 0;
 }
 
+.cv::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-image: url('/decoration/greenUnderline.png');
+  background-position: center;
+  background-size: contain;
+  z-index: 0;
+  background-repeat: no-repeat;
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+}
+
 .gradient-experience {
   background: linear-gradient(60deg, #e6b754, #f0e6d0);
   -webkit-background-clip: text;
